Modified Readme file and moved bank.proto to src